--- a/NHL Dashboard.qmd
+++ b/NHL Dashboard.qmd
@@ -303,7 +303,7 @@ stats_table
 
 
 ### Stanley Cup Odds
-```{html}
+```{=html}
 
 <iframe title="2025-26 Stanley Cup Odds" aria-label="Table" id="datawrapper-chart-kneUv" src="https://datawrapper.dwcdn.net/kneUv/50/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="2343" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
 
